# threema-gemini-skill

./: .gitignore  DEPENDENCY_AUDIT.md  SKILL.md  package-lock.json  package.json  tsconfig.json
.burn/: validate.sh
rust-bridge/: Cargo.toml
rust-bridge/libthreema/lib/: Cargo.toml  build.rs
rust-bridge/libthreema/lib/src/: lib.rs
rust-bridge/libthreema/lib/src/common/: keys.rs
rust-bridge/libthreema/lib/src/csp_e2e/message/: mod.rs  payload.rs
rust-bridge/libthreema/lib/src/csp_e2e/message/task/: incoming.rs  outgoing.rs
rust-bridge/libthreema/lib/src/https/: directory.rs  endpoint.rs
rust-bridge/libthreema/lib/src/model/: message.rs  provider.rs
rust-bridge/libthreema/macros/: Cargo.toml
rust-bridge/libthreema/tools/uniffi-bindgen/: Cargo.toml
rust-bridge/src/: main.rs
scripts/: check-queue.ts  create-group.ts  create-rogers-group.ts  listener-openclaw.ts  listener.js  listener.js.disabled  load-env.ts  pair-threema-image.ts  pair-threema.ts  reparse-groups.ts  send-group-family.ts  send-group-message.ts  send-group-tmp.ts  send-message.ts  send-test.ts  send_retry.js  test-delete.ts  threema-openclaw.d.ts
scripts/threema-openclaw-local/src/: device-join.js  mediator-client.js  rendezvous.js  rph-emoji.js  runtime-paths.js
tests/: noble-regression.test.ts  test-simple.ts  wycheproof.test.ts
