[package]
name = "threema-gemini-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
libthreema = { path = "libthreema/lib", features = ["cli"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
data-encoding = "2"

[build-dependencies]
prost-build = "0.14"
